# algodat_practice

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
algorithms/searching/: README.md
algorithms/searching/binary_search/: CMakeLists.txt  binary_search.c  binary_search.h  binary_search.py
algorithms/searching/linear_search/: CMakeLists.txt  linear_search.c  linear_search.py
algorithms/sorting/: README.md
algorithms/sorting/heap_sort/: CMakeLists.txt  heap_sort.c  heap_sort.h  heap_sort.py
algorithms/sorting/insertion_sort/: CMakeLists.txt  insertion_sort.c  insertion_sort.h  insertion_sort.py
algorithms/sorting/merge_sort/: CMakeLists.txt  merge_sort.c  merge_sort.h  merge_sort.py
algorithms/sorting/quick_sort/: CMakeLists.txt  quick_sort.c  quick_sort.h  quick_sort.py
data_structures/arrays/: CMakeLists.txt  README.md  arrays.c  arrays.h  arrays.py  test_arrays.c
data_structures/binary_search_trees/: CMakeLists.txt  README.md  binary_search_trees.c  binary_search_trees.h  binary_search_trees.py  test_binary_search_trees.c
data_structures/graphs/: README.md
data_structures/graphs/adjacency_list/: CMakeLists.txt  adjacency_list.c  adjacency_list.h  adjacency_list.py  test_adjacency_list.c
data_structures/hash_tables/: CMakeLists.txt  README.md  hash_tables.c  hash_tables.h  hash_tables.py  test_hash_tables.c
data_structures/linked_lists/: README.md
data_structures/priority_queues/: CMakeLists.txt  README.md  priority_queues.c  priority_queues.h  priority_queues.py  test_priority_queues.c
data_structures/queues/: README.md
data_structures/trees/: README.md
references/: references.md
(+33 files in other folders)
