cmake_minimum_required(VERSION 3.20)
project(algodat_practice C)
enable_testing()

set(CMAKE_C_STANDARD 11)

add_subdirectory(algorithms/searching/linear_search)
add_subdirectory(algorithms/searching/binary_search)
add_subdirectory(algorithms/sorting/insertion_sort)
add_subdirectory(algorithms/sorting/heap_sort)
add_subdirectory(algorithms/sorting/merge_sort)
add_subdirectory(algorithms/sorting/quick_sort)

add_subdirectory(data_structures/arrays)
add_subdirectory(data_structures/linked_lists/singly_linked_lists)
add_subdirectory(data_structures/linked_lists/doubly_linked_lists)
add_subdirectory(data_structures/queues/queue_array)
add_subdirectory(data_structures/hash_tables)
add_subdirectory(data_structures/trees/binary_search_trees)
add_subdirectory(data_structures/priority_queues)
add_subdirectory(data_structures/graphs/adjacency_matrix)
add_subdirectory(data_structures/graphs/adjacency_list)
